load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "sample-kotlin-lib",
    srcs = glob([
        "src/main/java/com/grab/grazel/sample/HelloWorld.kt",
    ]),
    visibility = [
        "//visibility:public",
    ],
)

load("@grab_bazel_common//tools/test:test.bzl", "grab_kt_jvm_test")

grab_kt_jvm_test(
    name = "sample-kotlin-lib-test",
    size = "medium",
    srcs = glob([
        "src/test/java/com/grab/grazel/sample/TestClass1.kt",
    ]),
    associates = [
        "//sample-kotlin-lib",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@maven//:junit_junit",
    ],
)
