load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "sample-lib-flavor1",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/ModuleName.kt",
    ]),
    visibility = [
        "//visibility:public",
    ],
)

load("@grab_bazel_common//tools/test:test.bzl", "grab_kt_jvm_test")

grab_kt_jvm_test(
    name = "sample-lib-flavor1-test",
    srcs = glob([
        "src/test/java/com/grab/grazel/flavor1/ModuleNameTest.kt",
    ]),
    associates = [
        "//sample-lib-flavor1",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@maven//:junit_junit",
    ],
)
