load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")
load("@grab_bazel_common//tools/test:test.bzl", "grab_kt_jvm_test")

kt_jvm_library(
    name = "sample-lib-flavor2",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/ModuleName.kt",
    ]),
    visibility = [
        "//visibility:public",
    ],
)

grab_kt_jvm_test(
    name = "sample-lib-flavor2-test",
    size = "small",
    srcs = glob([
        "src/test/java/com/grab/grazel/flavor2/ModuleNameTest.kt",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//sample-lib-flavor2",
        "@maven//:junit_junit",
    ],
)
