load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@grab_bazel_common//tools/test:test.bzl", "grab_kt_jvm_test")

kt_jvm_library(
    name = "sample-library-flavor2",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/ModuleName.kt",
    ]),
    visibility = [
        "//visibility:public",
    ],
)

grab_kt_jvm_test(
    name = "sample-library-flavor2-test",
    srcs = glob([
        "src/test/java/com/grab/grazel/flavor2/ModuleNameTest.kt",
    ]),
    associates = [
        "//flavor-libs/sample-library-flavor2:sample-library-flavor2",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@maven//:junit_junit",
    ],
)
